objects/Test1__c.object
<CustomObject>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Test1</relationshipLabel>
        <relationshipName>Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GB</fullName>
                </value>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>PL</fullName>
                </value>
                <value>
                    <fullName>HU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Test1</label>
    <nameField>
        <label>Test1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>